update span family

--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -391,6 +391,7 @@
           margin-bottom: 24px;
 
           span {
+            font-family: Teko;
             color: $primary;
           }
         }
