--- a/src/pages/MLBpowerdFS/index.module.scss
+++ b/src/pages/MLBpowerdFS/index.module.scss
@@ -146,98 +146,140 @@
 
         .container_footer_1 {
           display: flex;
-          flex-direction: column;
+          width: 100%;
           background-color: $black2;
-          padding: 10px 40px;
+          padding: 40px 42px;
           border-radius: 9px;
           align-items: flex-start;
+          width: 100%;
+          height: 406px;
 
-          .container_footer_header_1 {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: flex-start;
-            margin: 20px 0;
-            width: 80%;
-            text-align: left;
-
-            p {
-              display: flex;
-              align-items: flex-start;
-              font-size: 14px;
-
-              &:nth-child(1) {
-                width: 120px;
-              }
-
-              &:nth-child(2) {
-                width: 275px;
-              }
-
-              &:nth-child(3) {
-                width: 220px;
-              }
-
-              svg {
-                margin-right: 5px;
-              }
-            }
-          }
-
-          .container_footer_body {
+          .footer_column {
             display: flex;
             flex-direction: column;
-            width: 100%;
+
+            &.width_200 {
+              width: 180px;
+            }
 
             p {
-              font-size: 14px;
-              display: flex;
-              align-items: center;
-              margin: 10px 0;
+              margin: 0;
+              padding: 0;
+            }
 
-              span {
-                width: 6px;
-                height: 6px;
-                background-color: $primary;
-                border-radius: 50%;
-                margin: 5px 10px 0 0;
+            .column_title {
+              display: flex;
+              width: 100%;
+              margin-bottom: 8px;
+
+              p {
+                font-family: Teko;
+                font-size: 28px;
+                font-weight: 600;
+                color: $primary;
               }
             }
 
-            button {
-              background-color: $primary;
-              border: none;
-              outline: none;
+            .column_body {
               display: flex;
-              flex-direction: row;
-              padding: 13px 24px;
-              width: 210px;
-              font-size: 16px;
-              font-weight: 500;
-              border-radius: 12px;
-              margin: 25px 0;
+              flex-direction: column;
 
-              &:hover {
-                cursor: pointer;
-              }
-
-              img {
-                width: 30px;
-                height: 20px;
+              .column_row {
+                display: flex;
+                width: 100%;
+                font-family: Poppins;
+                font-size: 16px;
+                font-weight: 500;
+                margin: 0 0 16px 0;
                 position: relative;
-                margin-left: 10px;
-              }
-            }
 
-            .container_body_img {
-              width: 421px;
-              height: 291px;
-              position: absolute;
-              display: flex;
-              align-self: flex-end;
-              transform: translate(40px, -19px);
+                svg {
+                  margin: 0;
+                  padding: 0;
+                  width: 17px !important;
+                  height: 17px !important;
+                  position: absolute;
+                  top: 3px;
+                }
+
+                p {
+                  transform: translateX(24px);
+                  font-size: 16px;
+                  font-weight: 500;
+                  span {
+                    color: $primary;
+                    font-size: 16px;
+                    font-weight: 500;
+                  }
+                }
+              }
             }
           }
+
+          .contest_scoring_wrapper {
+            display: flex;
+            flex-direction: row;
+          }
+
+          .scoring_column {
+            display: flex;
+            flex-direction: column;
+            margin: 0 46px 0 0;
+
+            .scoring_title {
+              display: flex;
+              margin-bottom: 4px;
+
+              p {
+                margin: 0;
+                padding: 0;
+                font-size: 16px;
+                color: $grey2;
+                font-weight: 600;
+                font-family: Poppins;
+                border-bottom: 1px solid $grey2;
+                line-height: 16px;
+              }
+            }
+
+            .scoring_body {
+              display: flex;
+              flex-direction: column;
+
+              .width_140 {
+                width: 140px;
+              }
+
+              p {
+                font-size: 14px;
+                width: 105px;
+
+                &.flex_0_85 {
+                  flex: 0.85;
+                }
+              }
+
+              span {
+                font-size: 14px;
+                font-weight: 600;
+                color: $primary;
+              }
+
+              .scoring_row {
+                display: flex;
+                width: 100%;
+                text-align: left;
+              }
+            }
+          }
+        }
+        .container_body_img {
+          width: 421px;
+          height: 291px;
+          position: absolute;
+          display: flex;
+          align-self: flex-end;
+          bottom: 6.4rem;
         }
       }
 
