develop-the-contest-rules-popup

--- a/src/pages/NHLpowerdFS/index.module.scss
+++ b/src/pages/NHLpowerdFS/index.module.scss
@@ -5,8 +5,7 @@
 	flex-direction: column;
 	flex: 1;
 	position: relative;
-	margin-top: 50px;
-
+	padding-top: 50px;
 	.container {
 		display: flex;
 		flex-direction: row;
