linked deposit button to my account and on power center balance only visible if user logged in

--- a/src/pages/PowerCenter/PowerCenter.scss
+++ b/src/pages/PowerCenter/PowerCenter.scss
@@ -71,6 +71,7 @@
                 text-align: center;
                 color: $grey2;
                 border-right: 1px solid $grey;
+                cursor: pointer;
             }
 
             .__power_center_banner_footer_cash_and_balance_outer {
