--- a/src/components/SportsFilters/index.module.scss
+++ b/src/components/SportsFilters/index.module.scss
@@ -1,65 +1,69 @@
-@import '../../scss/colors.scss';
+@import "../../scss/colors.scss";
 
 .container_top_2 {
-	display: flex;
-	flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 
-	button {
-		border: none;
-		outline: none;
-		background-color: $lightBlack5;
-		color: $white;
-		margin: 0 22px;
-		width: 47px;
-		height: 47px;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-		position: relative;
-		font-size: 17px;
-		border-radius: 8px;
-		text-transform: uppercase;
+  button {
+    border: none;
+    outline: none;
+    background-color: $lightBlack5;
+    color: $white;
+    margin: 0 22px;
+    width: 47px;
+    height: 47px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    font-size: 17px;
+    border-radius: 8px;
+    text-transform: uppercase;
 
-		&.selected {
-			background-color: $primary;
-		}
+    &.selected {
+      background-color: $primary;
+    }
 
-		.tick {
-			display: none;
-		}
+    &.border {
+      border: 1px solid $primary;
+    }
 
-		span {
-			position: absolute;
-			transform: translate(0, 30px);
-			background-color: $darkblack;
-			width: 60px;
-			font-size: 14px;
-			border-radius: 6px;
-			text-transform: lowercase;
-		}
+    .tick {
+      display: none;
+    }
 
-		&:nth-child(1) {
-			margin: 0 10px 0 0;
-		}
+    span {
+      position: absolute;
+      transform: translate(0, 30px);
+      background-color: $darkblack;
+      width: 60px;
+      font-size: 14px;
+      border-radius: 6px;
+      text-transform: lowercase;
+    }
 
-		&:hover {
-			cursor: pointer;
-		}
+    &:nth-child(1) {
+      margin: 0 10px 0 0;
+    }
 
-		&.active {
-			color: $primary;
-			font-weight: 600;
+    &:hover {
+      cursor: pointer;
+    }
 
-			.tick {
-				display: unset;
-				position: absolute;
-				transform: translate(0, 27px);
-			}
+    &.active {
+      color: $primary;
+      font-weight: 600;
 
-			span {
-				display: none;
-			}
-		}
-	}
+      .tick {
+        display: unset;
+        position: absolute;
+        transform: translate(0, 27px);
+      }
+
+      span {
+        display: none;
+      }
+    }
+  }
 }
