--- a/src/components/SportsSelectionCard2/index.module.scss
+++ b/src/components/SportsSelectionCard2/index.module.scss
@@ -1,292 +1,327 @@
-@import '../../scss/colors.scss';
+@import "../../scss/colors.scss";
 
 .container_body_card {
-	background-color: $lightBlack;
-	border-radius: 5px;
-	padding: 17px 16px;
-	box-shadow: 0 8px 25px 0 $lightBlack7;
-	width: 463px;
-	margin: 10px 0px;
+  background-color: $lightBlack;
+  border-radius: 5px;
+  padding: 17px 16px;
+  box-shadow: 0 8px 25px 0 $lightBlack7;
+  width: 463px;
+  height: 182px;
+  margin: 10px 0px;
+  position: relative;
 
-	.container_body_card_1 {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		align-items: flex-end;
+  &.inset {
+    overflow: hidden;
+    padding-top: 21px;
+  }
 
-		.container_body_left {
-			display: flex;
-			flex-direction: column;
+  .container_body_card_1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
 
-			.container_body_card_header {
-				display: flex;
-				justify-content: space-between;
-				align-items: center;
-		
-				.container_selected_p {
-					font-size: 18px;
-					padding: 0;
-					margin: 0;
-					// border-bottom: 2px solid $lightBlue;
-					color: $lightBlue;
-					font-family: Poppins;
-					font-weight: 600;
-		
-					&.active {
-						color: $primary;
-						border-bottom-color: $primary;
-					}
-				}
-		
-				button {
-					background-color: $lightBlack6;
-					border: none;
-					outline: none;
-					color: $grey2;
-					font-size: 12px;
-					width: 84px;
-					height: 28px;
-					border-radius: 4px;
-					margin-left: 10px;
-					opacity: 0.6;
-					font-family: Poppins;
-					font-weight: 600;
-		
-					&:hover {
-						cursor: pointer;
-					}
-		
-					&.disabled {
-						background-color: $lightGrey4;
-						cursor: not-allowed;
-						opacity: 0.2;
-					}
-				}
-		
-				.container_selected {
-					padding: 0;
-					margin: 0 0 0 15px;
-		
-					.container_selected_p_1 {
-						display: flex;
-						flex-direction: row;
-						margin: 0;
-						padding: 0;
-						justify-content: center;
-						align-items: center;
-		
-						img {
-							width: 24px;
-							height: 24px;
-							margin-left: 5px;
-		
-							&:hover {
-								cursor: pointer;
-							}
-						}
-		
-						svg {
-							margin-right: 5px;
-						}
-					}
-				}
-			}
+    .container_body_left {
+      display: flex;
+      flex-direction: column;
 
-			.container_body_card_state {
-				margin: 5px 0 4px 0;
-				width: 260px;
-	
-				&.border {
-					border-left: 3px solid $lightBlue;
-				}
-		
-				&.active {
-					border-color: $primary;
-				}
-		
-				&.card_state_no_data {
-					padding-left: 10px;
-				}
-		
-				.card_state {
-					display: flex;
-					flex-direction: column;
-					justify-content: space-evenly;
-					
-					.card_state_title {
-						display: flex;
-						flex-direction: row;
-						justify-content: space-evenly;
-						
-						span {
-							color: $grey2;
-							font-size: 10px;
-							text-transform: uppercase;
-							opacity: 0.6;
-							text-align: center;
-							flex: 1;
-						}
-					}
-		
-					
-					.card_state_values {
-						display: flex;
-						justify-content: space-evenly;
-						width: 100%;
+      .container_body_card_header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
 
-						span {
-							text-align: center;
-							flex: 1;
-							font-weight: 600;
-							font-size: 16px;
-						}
-					}
-				}
-			}
-		}
+        .container_selected_p {
+          font-size: 18px;
+          padding: 0;
+          margin: 0;
+          // border-bottom: 2px solid $lightBlue;
+          color: $lightBlue;
+          font-family: Poppins;
+          font-weight: 600;
 
-		.container_body_right {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			transform: translate(0, -6px);
+          &.active {
+            color: $primary;
+            border-bottom-color: $primary;
+          }
+        }
 
-			.right_img {
-				background-color: $white;
-				display: flex;
-				width: 92px;
-				height: 92px;
-				border-radius: 8px;
-				border: 1px solid $primary;
-				overflow: hidden;
-				box-shadow: 0 12px 24px 0 $primaryLight4;
-			}
-			.img_badge {
-				position: absolute;
-				width: 24px;
-				height: 24px;
-				transform: translate(45px, -12px);
-				border-radius: 50%;
-			}
+        button {
+          background-color: $lightBlack6;
+          border: none;
+          outline: none;
+          color: $grey2;
+          font-size: 12px;
+          width: 84px;
+          height: 28px;
+          border-radius: 4px;
+          margin-left: 10px;
+          opacity: 0.6;
+          font-family: Poppins;
+          font-weight: 600;
 
-			p {
-				margin: 5px 0 0 0;
-				padding: 0;
-				font-family: Teko;
-				font-weight: 600;
-				font-size: 14px;
-				border-bottom: 1px solid $white;
-			}
-		}
-	}
+          &:hover {
+            cursor: pointer;
+          }
 
-	p {
-		font-size: 14px;
-		margin-top: 15px;
+          &.disabled {
+            background-color: $lightGrey4;
+            cursor: not-allowed;
+            opacity: 0.2;
+          }
+        }
 
-		span {
-			font-weight: 600;
-			font-size: 20px;
-		}
+        .container_selected {
+          padding: 0;
+          margin: 0 0 0 15px;
 
-		.teamA {
-			font-size: 14px;
-		}
-	}
+          .container_selected_p_1 {
+            display: flex;
+            flex-direction: row;
+            margin: 0;
+            padding: 0;
+            justify-content: center;
+            align-items: center;
 
-	.card_state_main_container {
-		display: flex;
-		flex-direction: row;
-		font-family: Poppins;
+            img {
+              width: 24px;
+              height: 24px;
+              margin-left: 5px;
 
-		&.space_evenly {
-			justify-content: space-evenly;
-			align-items: center;
-		}
+              &:hover {
+                cursor: pointer;
+              }
+            }
 
-		.card_state_left {
-			display: flex;
-			flex-direction: column;
-			padding-top: 20px;
-			font-size: 14px;
+            svg {
+              margin-right: 5px;
+            }
+          }
+        }
+      }
 
-			strong {
-				display: flex;
-				flex: 1;
-				font-weight: normal;
-				text-transform: capitalize;
-			}
-		}
+      .container_body_card_state {
+        margin: 5px 0 4px 0;
+        width: 260px;
 
-		img {
-			width: 93%;
-			height: 76px;
-			margin: 25px auto;
-		}
-	}
+        &.border {
+          border-left: 3px solid $lightBlue;
+        }
 
-	.container_card_footer_main {
-		display: flex;
-		flex-direction: row;
-		align-items: flex-end;
-		justify-content: flex-end;
+        &.active {
+          border-color: $primary;
+        }
 
-		.card_footer {
-			display: flex;
-			flex-direction: column;
-			flex: 1;
+        &.card_state_no_data {
+          padding-left: 10px;
+        }
 
-			.container_body_footer {
-				width: 100%;
-				align-self: center;
-				display: flex;
-				justify-content: space-evenly;
-				align-items: center;
-				padding: 0;
-				margin: 0;
-		
-				span {
-					display: flex;
-					font-size: 14px;
-					font-weight: normal;
-					color: $grey2;
-					opacity: 0.6;
-		
-					svg {
-						margin-right: 5px;
-					}
-				}
-			}
-		}
-	}
-	.divider {
-		border: 0.4px solid $divider;
-		opacity: 0.1;
-		padding: 0;
-		margin: 5px 0;
-		width: 220px;
-		transform: translate(100px, 0);
-	}
+        .card_state {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-evenly;
 
-	.container_body_card_start_power {
-		border-radius: 6px;
-		background-image: linear-gradient(110deg, #fda700, #fb6e00 72%);
-		display: flex;
-		flex-direction: row;
-		align-items: center;
-		width: 100px;
-		height: 22px;
-		padding: 5px;
-		font-size: 14px;
-		color: $darkblack;
-		position: absolute;
-		font-family: Teko;
-		transform: translate(0, -25px);
+          .card_state_title {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-evenly;
 
-		img {
-			width: 20px;
-			height: 20px;
-			margin-right: 5px;
-		}
-	}
+            span {
+              color: $grey2;
+              font-size: 10px;
+              text-transform: uppercase;
+              opacity: 0.6;
+              text-align: center;
+              flex: 1;
+            }
+          }
+
+          .card_state_values {
+            display: flex;
+            justify-content: space-evenly;
+            width: 100%;
+
+            span {
+              text-align: center;
+              flex: 1;
+              font-weight: 600;
+              font-size: 16px;
+            }
+          }
+        }
+      }
+    }
+
+    .container_body_right {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      transform: translate(0, -6px);
+
+      .right_img {
+        background-color: $white;
+        display: flex;
+        width: 92px;
+        height: 92px;
+        border-radius: 8px;
+        border: 1px solid $primary;
+        overflow: hidden;
+        box-shadow: 0 12px 24px 0 $primaryLight4;
+      }
+      .img_badge {
+        position: absolute;
+        width: 24px;
+        height: 24px;
+        transform: translate(45px, -12px);
+        border-radius: 50%;
+      }
+
+      p {
+        margin: 5px 0 0 0;
+        padding: 0;
+        font-family: Teko;
+        font-weight: 600;
+        font-size: 14px;
+        border-bottom: 1px solid $white;
+      }
+    }
+  }
+
+  p {
+    font-size: 14px;
+    margin-top: 15px;
+
+    span {
+      font-weight: 600;
+      font-size: 20px;
+    }
+
+    .teamA {
+      font-size: 14px;
+    }
+  }
+
+  .card_state_main_container {
+    display: flex;
+    flex-direction: row;
+    font-family: Poppins;
+
+    &.space_evenly {
+      justify-content: space-evenly;
+      align-items: center;
+    }
+
+    .card_state_left {
+      display: flex;
+      flex-direction: column;
+      padding-top: 20px;
+      font-size: 14px;
+
+      strong {
+        display: flex;
+        flex: 1;
+        font-weight: normal;
+        text-transform: capitalize;
+      }
+    }
+
+    img {
+      width: 93%;
+      height: 76px;
+      margin: 25px auto;
+    }
+  }
+
+  .container_card_footer_main {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: flex-end;
+    margin: 5px 0 0 0;
+
+    .card_footer {
+      display: flex;
+      flex-direction: column;
+      flex: 1;
+
+      .container_body_footer {
+        width: 100%;
+        align-self: center;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        padding: 0;
+        margin: 0;
+
+        span {
+          display: flex;
+          font-size: 14px;
+          font-weight: normal;
+          color: $grey2;
+          opacity: 0.6;
+
+          svg {
+            margin-right: 5px;
+          }
+        }
+      }
+    }
+  }
+  .divider {
+    border: 0.4px solid $divider;
+    opacity: 0.1;
+    padding: 0;
+    margin: 5px 0;
+    width: 220px;
+    transform: translate(100px, 0);
+  }
+
+  .container_body_card_start_power {
+    border-radius: 6px;
+    background-image: linear-gradient(110deg, #fda700, #fb6e00 72%);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100px;
+    height: 22px;
+    padding: 5px;
+    font-size: 14px;
+    color: $darkblack;
+    position: absolute;
+    font-family: Teko;
+    transform: translate(0, -25px);
+
+    &.inset {
+      border-radius: 2px;
+      background-image: linear-gradient(110deg, $primary 60%, $yellow);
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      width: 130px;
+      height: 16px;
+      position: absolute;
+      transform: translate(-18px, -23px);
+      box-shadow: 0 0px 8px 4px $black;
+      font-size: 13px;
+      text-align: center;
+      text-transform: uppercase;
+      font-weight: 550;
+      color: $darkblack;
+      font-family: Teko;
+      margin: 3px 0 0 0;
+      padding: 0;
+
+      svg {
+        padding: 0;
+        margin: 0;
+        margin-right: 2px;
+      }
+    }
+
+    img {
+      width: 20px;
+      height: 20px;
+      margin-right: 5px;
+    }
+  }
 }
