--- a/src/pages/MLBpowerdFS/index.module.scss
+++ b/src/pages/MLBpowerdFS/index.module.scss
@@ -88,6 +88,8 @@
 
           p {
             font-size: 16px;
+            width: 80%;
+            text-align: center;
           }
         }
 
@@ -312,6 +314,12 @@
       .partner_logo {
         width: 250px;
         height: 40px;
+        display: flex;
+        align-self: flex-end;
+        margin: 20px 0;
+      }
+
+      .partner_logo_2 {
         display: flex;
         align-self: flex-end;
         margin: 20px 0;
