improve-the-little-changes-on-popup

--- a/src/ui/PopUp/styles.scss
+++ b/src/ui/PopUp/styles.scss
@@ -17,6 +17,15 @@
     left: 0 !important;
     right: 0 !important;
 }   
+.blur{
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    background: rgba($color: #000000, $alpha: 0.5);
+    animation: forwards 0.1s PopUp;
+}
 
 @keyframes PopUp {
     0%{
