--- a/src/components/BalanceInfoComponent/index.module.scss
+++ b/src/components/BalanceInfoComponent/index.module.scss
@@ -13,7 +13,6 @@ p {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 2px solid $lightBlack3;
     padding: 10px 0;
     font-style: 16px;
 
@@ -21,12 +20,13 @@ p {
       display: flex;
       align-items: center;
       font-size: 16px;
+      flex: 1;
 
       .span {
-        margin: 0 35px;
         font-weight: bold;
         font-size: 26px;
         color: $primary;
+        flex: 1;
       }
     }
 
@@ -63,8 +63,8 @@ p {
     }
   }
 
-  .list_container:last-child {
-    border-bottom: none;
+  .list_container:first-child{
+    border-bottom: 2px solid $lightBlack3;
   }
 }
 
@@ -73,6 +73,7 @@ p {
   align-items: center;
   font-size: 16px;
   color: $grey3;
+  flex: 1;
 
   span {
     margin: 0 8px;
@@ -270,12 +271,13 @@ p {
         width: 100%;
         justify-content: space-between;
         margin: 10px 0;
+        flex: 1;
 
         .span {
-          margin: 0 35px;
           font-weight: bold;
           font-size: 26px;
           color: $primary;
+          flex: 1;
         }
       }
 
@@ -309,6 +311,7 @@ p {
     align-items: center;
     font-size: 16px;
     color: $grey3;
+    flex: 1;
 
     span {
       margin: 0 8px;
