--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -99,8 +99,11 @@ body{
 .__title-1{
     font-size: 3rem;
 }
-.__title-3{
+.title-2{
     font-size: 2.286rem;
+}
+.__title-3{
+    font-size: 1.714rem;
 }
 .__title-4{
     font-size: 1.286rem;
